--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>MusicGraph</title>
+		<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' type='text/css' />
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<script type="text/javascript" src="js/knockout-3.1.0.js"></script>
 		<script type="text/javascript" src="js/d3.min.js"></script>
@@ -12,6 +13,19 @@
 		<script type="text/javascript" src="js/viewmodel.js"></script>
 	</head>
 	<body>
+		<div id="app">
+			<div id="playlist">
+				<img src="img/logo.png" id="logo" />
+				<h2>Playlist</h2>
+				<li>
+				</li>
+			</div>
+			<div id="interactive-pane">
+				<svg id="buffer" width="100%" height="100%">
+				</svg>
+			</div>
+			<div style="clear: both;"></div>
+		</div>
 		<script type="text/javascript" src="js/d3init.js"></script>
 		<script type="text/javascript" src="js/init.js"></script>
 	</body>
