--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 	<head>
 		<title>MusicGraph</title>
+		<meta http-equiv="content-type" content="text/html; charset=UTF8">
 		<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' type='text/css' />
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
-		<script type="text/javascript" src="js/knockout-3.1.0.js"></script>
-		<script type="text/javascript" src="js/d3.min.js"></script>
+		<script type="text/javascript" src="js/knockout-3.1.0.debug.js"></script>
+		<script type="text/javascript" src="js/d3.js"></script>
 		<script type="text/javascript" src="js/model.song.js"></script>
 		<script type="text/javascript" src="js/model.node.js"></script>
+		<script type="text/javascript" src="js/model.edge.js"></script>
 		<script type="text/javascript" src="js/model.musicapi.js"></script>
 		<script type="text/javascript" src="js/model.playlist.js"></script>
 		<script type="text/javascript" src="js/viewmodel.js"></script>
@@ -21,12 +23,10 @@
 				</li>
 			</div>
 			<div id="interactive-pane">
-				<svg id="buffer" width="100%" height="100%">
-				</svg>
 			</div>
 			<div style="clear: both;"></div>
 		</div>
-		<script type="text/javascript" src="js/d3init.js"></script>
 		<script type="text/javascript" src="js/init.js"></script>
+		<script type="text/javascript" src="js/d3init.js"></script>
 	</body>
 </html>
