--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	</head>
 	<body>
 		<div id="app">
+			<audio id="audio-player"></audio>
 			<div id="playlist">
 				<img src="img/logo.png" id="logo" />
 				<h2>Playlist</h2>
