--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<script type="text/javascript" src="js/model.song.js"></script>
 		<script type="text/javascript" src="js/model.node.js"></script>
 		<script type="text/javascript" src="js/model.edge.js"></script>
+		<script type="text/javascript" src="js/model.genre.js"></script>
 		<script type="text/javascript" src="js/model.artist.js"></script>
 		<script type="text/javascript" src="js/model.musicapi.js"></script>
 		<script type="text/javascript" src="js/model.playlist.js"></script>
