--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
 			<audio id="audio-player"></audio>
 			<div id="playlist">
 				<img id="imageIcon" src="img/logo.png" id="logo" />
-				<h2 id="playlistTitle" data-bind="visible: playList.songs().length > 0">Playlist</h2>
+				<h2 id="playlistTitle" data-bind="visible: playList.songs().length > 0">Playlist<small>:<span data-bind="text: playList.songs().length"></span></small></h2>
 				<ul class="playlist-list" data-bind="foreach: playList.songs">
 					<li>
 						<a class="song-name" href="#" data-bind="text: fullName, click: $root.playSong"></a>
-						<a class="x-button" href="#" data-bind="click: $root.deletePlaylistSong">X</a>
-						<span data-bind="visible: isPlaying()" class="play-icon">▶</span>
+						<span class="playlist-buttons">
+							<a class="x-button" href="#" data-bind="click: $root.deletePlaylistSong">X</a>
+							<span data-bind="visible: isPlaying()" class="play-icon">▶</span>
+						</span>
 					</li>
 				</ul>
 			</div>
