--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="js/angular.min.js"></script>
 		<script type="text/javascript" src="js/plangular.js"></script>
+		<script type="text/javascript" src="js/model.state.js"></script>
 		<script type="text/javascript" src="js/model.song.js"></script>
 		<script type="text/javascript" src="js/model.node.js"></script>
 		<script type="text/javascript" src="js/model.edge.js"></script>
