--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<button class="spotify-make-playlist" data-bind="visible: playList.songs().length > 0, click: makePlaylist">
 					<img src="img/spotify.png" class="spotify-icon"/>Make Playlist<small>:<span data-bind="text: playList.songs().length"></span></small>
 				</button>
-				<ul class="playlist-list" data-bind="foreach: playList.songs">
+				<ul class="playlist-list" data-bind="foreach: {data: playList.songs, beforeRemove: slideHideElement}">
 					<li>
 						<a class="song-name" href="#" data-bind="text: fullName, click: $root.playSong"></a>
 						<span class="playlist-buttons">
