--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			</div>
 			<div class="breadcrumbs">
 				<button class="breadcrumb artist" data-bind="visible: level() == 'song', click: clickArtistBreadCrumb">Artists</button>
-				<button class="breadcrumb genre" data-bind="visible: level() == 'song' || level() == 'artist', click: clickGenreBreadCrumb">Genre</button>
+				<button class="breadcrumb genre" data-bind="visible: level() == 'song' || level() == 'artist', click: clickGenreBreadCrumb">Genres</button>
 			</div>
 			<audio id="audio-player"></audio>
 			<audio id="audio-player-2"></audio>
