--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>MusicGraph</title>
 		<meta http-equiv="content-type" content="text/html; charset=UTF8">
+		<link rel="icon" type="image/png" href="favicon.png" />
+		<link rel="shortcut icon" type="image/png" href="favicon.png" />
 		<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' type='text/css' />
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<script type="text/javascript" src="js/knockout-3.1.0.debug.js"></script>
