--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>MusicGraph</title>
 		<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' type='text/css' />
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="js/knockout-3.1.0.js"></script>
 		<script type="text/javascript" src="js/d3.min.js"></script>
 		<script type="text/javascript" src="js/model.song.js"></script>
