--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<script type="text/javascript" src="js/init.js"></script>
 		<script type="text/javascript" src="js/d3init.js"></script>
 		<script>
-			['Electronic', 'Rock', 'Pop', 'Country', 'dance', 'alternative', 'classical', 'r&b', 'hip-hop', 'jazz']
+			['Electronic', 'Rock', 'Pop', 'Country', 'trance', 'alternative', 'classical', 'r&b', 'rap', 'jazz']
 			.map(function(name) {
 				return new Node(vm, new Genre(name, name.toLowerCase()), NODE_TYPES.GENRE);
 			})
