--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		<script type="text/javascript" src="js/knockout-3.1.0.debug.js"></script>
 		<script type="text/javascript" src="js/d3.js"></script>
 		<script type="text/javascript" src="js/jquery.min.js"></script>
+		<script type="text/javascript" src="js/angular.min.js"></script>
+		<script type="text/javascript" src="js/plangular.js"></script>
 		<script type="text/javascript" src="js/model.song.js"></script>
 		<script type="text/javascript" src="js/model.node.js"></script>
 		<script type="text/javascript" src="js/model.edge.js"></script>
