--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<script type="text/javascript" src="js/init.js"></script>
 		<script type="text/javascript" src="js/d3init.js"></script>
 		<script>
-			['Electronic', 'Rock', 'Pop', 'Country', 'Trance', 'Alternative', 'Classical', 'R&B', 'Rap', 'Jazz']
+			['Electronic', 'Rock', 'Pop', 'Country', 'Trance', 'Dubstep', 'Classical', 'R&B', 'Rap', 'Jazz']
 			.map(function(name) {
 				return new Node(vm, new Genre(name, name.toLowerCase()), NODE_TYPES.GENRE);
 			})
