--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<script type="text/javascript" src="js/model.youtube.js"></script>
 		<script type="text/javascript" src="js/model.playlist.js"></script>
 		<script type="text/javascript" src="js/viewmodel.js"></script>
+		<script src="https://apis.google.com/js/client:plusone.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<svg class="absolute waveform waveform-small" xmlns="http://www.w3.org/2000/svg" viewBox="0 -2 64 34" preserveAspectRatio="none">
