--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 	    </svg>
 		<div id="app">
 			<audio id="audio-player"></audio>
+			<audio id="audio-player-2"></audio>
 			<div id="playlist">
 				<img id="imageIcon" src="img/logo.png" id="logo" />
 				<h2 id="playlistTitle" data-bind="visible: playList.songs().length > 0">Playlist</h2>
